WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138970
[iOS] Regression(
r176202
): line-height is wrong on marco.org
https://bugs.webkit.org/show_bug.cgi?id=138970
Summary
[iOS] Regression(r176202): line-height is wrong on marco.org
Chris Dumez
Reported
2014-11-21 10:27:57 PST
line-height is wrong on marco.org after
r176202
, on iOS. Radar: <
rdar://problem/19039387
>
Attachments
Patch
(4.82 KB, patch)
2014-11-21 10:59 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.86 KB, patch)
2014-11-21 12:57 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.40 KB, patch)
2014-11-21 14:05 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.77 KB, patch)
2014-11-21 15:18 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.77 KB, patch)
2014-11-21 15:29 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2014-11-21 10:59:59 PST
Created
attachment 242052
[details]
Patch
Chris Dumez
Comment 2
2014-11-21 11:00:58 PST
For reference, this was the code before:
https://bugs.webkit.org/attachment.cgi?id=241714&action=review
Simon Fraser (smfr)
Comment 3
2014-11-21 11:03:58 PST
Comment on
attachment 242052
[details]
Patch Please add a layout test.
Chris Dumez
Comment 4
2014-11-21 12:57:44 PST
Created
attachment 242065
[details]
Patch
Chris Dumez
Comment 5
2014-11-21 13:08:01 PST
@dbates: Is there a way I can explicitly NOT skip my new test on iOS (even though fast/css is skipped)? For e.g. Should I mark this specific test as [ Pass ] in the iphonesimulator TestExpectations file?
Myles C. Maxfield
Comment 6
2014-11-21 14:00:29 PST
Yes. For an example, see LayoutTests/platform/mac/TestExpectations in
https://bugs.webkit.org/attachment.cgi?id=242061&action=review
Chris Dumez
Comment 7
2014-11-21 14:05:33 PST
Created
attachment 242070
[details]
Patch
Chris Dumez
Comment 8
2014-11-21 14:07:25 PST
(In reply to
comment #6
)
> Yes. For an example, see LayoutTests/platform/mac/TestExpectations in >
https://bugs.webkit.org/attachment.cgi?id=242061&action=review
Ok, done.
Simon Fraser (smfr)
Comment 9
2014-11-21 15:06:07 PST
Comment on
attachment 242070
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242070&action=review
> Source/WebCore/ChangeLog:23 > + No new tests, iOS specific. Verified manually on marco.org > + using an iPhone 6 Plus.
This is a lie!
> Source/WebCore/css/StyleBuilderCustom.h:518 > +template <ApplyTextSizeMultiplierOrNot applyTextMultiplier> > inline bool convertLineHeight(StyleResolver& styleResolver, const CSSValue& value, Length& length, float multiplier = 1.f)
Seems bloaty to generate 2 copies of this mostly-identical code. Why not just pass in a param, or just pass in styleResolver.style() or just get it from styleResolver?
Chris Dumez
Comment 10
2014-11-21 15:18:59 PST
Created
attachment 242079
[details]
Patch
Myles C. Maxfield
Comment 11
2014-11-21 15:24:53 PST
Can't we make a real test? Perhaps that two lines with AHEM with a particular line height is the same as the same two lines except with a third blank line in between them?
Chris Dumez
Comment 12
2014-11-21 15:26:59 PST
(In reply to
comment #11
)
> Can't we make a real test? Perhaps that two lines with AHEM with a > particular line height is the same as the same two lines except with a third > blank line in between them?
The bug is in the CSS StyleBuilder, I am testing the StyleBuilder.
Chris Dumez
Comment 13
2014-11-21 15:29:26 PST
Created
attachment 242081
[details]
Patch
WebKit Commit Bot
Comment 14
2014-11-21 17:22:34 PST
Comment on
attachment 242081
[details]
Patch Clearing flags on attachment: 242081 Committed
r176490
: <
http://trac.webkit.org/changeset/176490
>
WebKit Commit Bot
Comment 15
2014-11-21 17:22:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug